Fix align for two srctions

--- a/src/styles/blocks/benefits.scss
+++ b/src/styles/blocks/benefits.scss
@@ -52,6 +52,7 @@
 
   &__description {
     grid-column: span 4;
+    text-align: center;
   }
 
   &__icon {
