--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 110px;
 
     @include onTablette {
       margin-bottom: 140px;
@@ -71,6 +72,7 @@
   }
 
   &__menu {
+    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
@@ -182,5 +184,6 @@
   &__quote {
     font-size: 24px;
     line-height: 36px;
+    text-align: center;
   }
 }
